--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.4.1",
     "@radix-ui/themes": "^3.2.0",
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
@@ -28,6 +30,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
     "postcss": "^8",
+    "prisma": "^6.4.1",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
